# ason-rs

./: .gitignore  CONTRIBUTING  Cargo.toml  LICENSE.additional  README.md  rust-toolchain.toml
.cargo/: config.toml
docs/: assembly_syntax.md
examples/: 01-object.ason  01-primitive.ason  01-value.ason  03-tuple.ason  05-variant.ason  06-error.ason
src/: ast.rs  chariter.rs  charposition.rs  charstream.rs  error.rs  errorprinter.rs  formatter.rs  forwarditer.rs  lexer.rs  lib.rs  location.rs  lookaheaditer.rs  normalizer.rs  parser.rs  peekable_iterator.rs  peekableiter.rs  printer.rs  process.rs  serde.rs  token.rs  writer.rs
src/ast/: parser.rs  printer.rs  writer.rs
src/process/: lexer.rs  lookaheaditer.rs  lookaheadvec.rs  parser.rs  peekable_iterator.rs  writer.rs
src/serde/: de.rs  ser.rs  serde_date.rs  serde_datetime.rs  serde_hex_bytes.rs
test/resources/: 03-nested.anon  04-unsupported.anon
tests/: test_api.rs  test_parse_and_format.rs  test_parse_files.rs  test_parser.rs
tests/resources/: 01-general.ason  01-object.ason  02-array.ason  04-nested.ason
