[package]
name = "ason"
version = "0.1.6"
edition = "2021"

license = "MPL-2.0"
description = "A data format designed to be easy for humans to read and write."
homepage = "https://hemashushu.github.io/works/xiaoxuan-script-object-notation"
documentation = "https://hemashushu.github.io/works/xiaoxuan-script-object-notation"
repository = "https://github.com/hemashushu/xiaoxuan-script-object-notation"
readme = "README.md"
keywords = ["ason", "parser", "json", "serde", "xiaoxuan"]
categories = ["encoding", "parser-implementations"]

[dependencies]
chrono = "0.4.35"
hexfloat2 = "0.1.3"

[dev-dependencies]
pretty_assertions = "1.4.0"
