[package]
name = "ason"
version = "1.2.0"
edition = "2021"

license = "MPL-2.0"
description = "ASON is a data format that evolved from JSON, introducing strong data typing and support for variant types."
homepage = "https://hemashushu.github.io/works/ason"
documentation = "https://hemashushu.github.io/works/ason"
repository = "https://github.com/hemashushu/ason-rs"
readme = "README.md"
keywords = ["ason", "parser", "json", "serde", "xiaoxuan"]
categories = ["encoding", "parser-implementations"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
chrono = { version = "0.4.38", features = ["serde"] }
hexfloat2 = "0.1.3"

# clap is more common, but the size is larger
# argh = "0.1.12"

[dev-dependencies]
pretty_assertions = "1.4.1"

[features]
